# pellet_metering

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pellet_metering.kdev4
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake
configured/: CMakeLists.txt  config.hpp.in
doc/: INSTALL.txt  metering.xmi  notes_for_raspberry.txt
src/: CMakeLists.txt
src/data_server/: CMakeLists.txt
src/i2c_routines/: CMakeLists.txt  i2c_routines.cc  i2c_routines.h
src/measuring/: ADC_sensor.cpp  ADC_sensor.h  Air_pressure.cpp  Air_pressure.h  BME280_sensor.cpp  BME280_sensor.h  CMakeLists.txt  GPIO_control.cpp  GPIO_control.h  GPIO_read.cpp  GPIO_read.h  Humidity.cpp  Humidity.h  I2C_sensor.cpp  I2C_sensor.h  K_TypeTemperature.cpp  K_TypeTemperature.h  Measurement.cpp  Measurement.h  Scheduler.cpp  Scheduler.h  Sensor.cpp  Sensor.h  Temperature_room.cpp  Temperature_room.h
src/simulation/: CMakeLists.txt  bme280.c  bme280_defs.h  pi-gpio.h  sim_gpio.c
test/: CMakeLists.txt  boostTester.cpp  temperatureSensorTest.cpp  testScheduler.cpp
